# spot-python

./: .gitignore  Makefile  README.md  STYLE_PACK_IMPLEMENTATION.md  demo.py  good_content.txt  pyproject.toml  requirements.txt  test_content.txt  test_lint.py
docs/: INTEGRATION_GUIDE.md
scripts/: lint_content.py
spot/: __init__.py  cli.py
spot/core/: config.py  spot.py
spot/providers/: manager.py
spot/utils/: __init__.py  logger.py  style_linter.py
spot/web/: __init__.py  app.py
tests/: conftest.py  test_spot.py
